--- a/mail/mutt/Makefile
+++ b/mail/mutt/Makefile
@@ -1,8 +1,6 @@
-# $NetBSD: Makefile,v 1.148 2007/01/07 09:13:58 rillig Exp $
+# $NetBSD: Makefile,v 1.149 2007/05/27 13:34:16 tron Exp $
 
-DISTNAME=		mutt-1.4.2.2i
-PKGREVISION=		3
-PKGNAME=		${DISTNAME:C/i$//}
+DISTNAME=		mutt-1.4.2.3
 CATEGORIES=		mail
 MASTER_SITES=		ftp://ftp.mutt.org/mutt/ \
 			ftp://ftp.stealth.net/pub/mirrors/ftp.mutt.org/pub/mutt/ \
